Reorganize layout, add skills cloud, update about me, add logos

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>App</title>
-    <link rel="stylesheet" href="/dist/mini-nord.min.css">
+    <link rel="stylesheet" href="/dist/mini-default.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <header class="sticky" id="header" />
-  </header>
-  <div class="container" id="root">
+  <div id="root">
+
   </div>
-  <footer id="footer">
-  </footer>
   <script src="./bundle.js"></script>
 </body>
 </html>
